<resources>

    <!-- 半个中文空格：&#8194; 一个中文空格：&#12288; 省略号：&#8230;-->

    <string name="app_name">Jotting2</string>
    <string name="measure">确定</string>
    <string name="confirm">确认</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="add_new">添加</string>
    <string name="add_fail">添加失败</string>
    <string name="next">下一个</string>
    <string name="delete">删除</string>
    <string name="to_alert">修改</string>

    <!-- NavigationView -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- menu -->
    <string name="action_exit">Exit</string>

    <!-- Loading -->
    <string name="loading">正在加载&#8230;</string>
    <string name="progressing">正在处理&#8230;</string>
    <string name="submiting">正在提交&#8230;</string>
    <string name="calculating">正在计算&#8230;</string>
    <string name="load_out_time_to_reload">数据过期，点击后重新加载&#8230;</string>
    <string name="load_fail">加载失败&#8230;</string>
    <string name="toast_submit_fail">提交失败&#8230;</string>

    <!-- 主界面 -->
    <string name="press_again_to_leave">再按一次退出程序</string>

    <!-- 首页的抽屉菜单 -->
    <string name="nav_menu_prijects">所有项目</string>
    <string name="nav_menu_file_manager">备份文件管理</string>
    <string name="nav_menu_function">其他功能</string>
    <string name="nav_menu_function_new">添加项目</string>
    <string name="nav_menu_function_backup">备份</string>
    <string name="nav_menu_function_restore">快速恢复</string>
    <string name="nav_menu_function_clear">清空数据库</string>
    <string name="nav_menu_function_calculator">计算器</string>

    <!-- 界面标题名 -->
    <string name="title_name_project">@string/app_name</string>
    <string name="title_name_files">@string/nav_menu_file_manager</string>

    <!-- Project -->
    <string name="new_project">新建项目</string>
    <string name="project_name">项目名称</string>
    <string name="project_name_hint">请输入项目名称</string>
    <string name="project_type">项目类型</string>
    <string name="project_type_hint">请输入项目类型</string>
    <string name="project_total_money">总金额</string>
    <string name="project_total_money_hint">请输入总金额</string>
    <string name="description_total_money">总消费：¥ %s</string>
    <string name="description_startTime">建档时间：%1$tF %2$tT</string>
    <string name="description_modifyTime">修改时间：%1$tF %2$tT</string>
    <string name="description_state">状态：%s</string>
    <string name="description_state_normal">正常</string>
    <string name="description_state_end">已结束</string>
    <string name="description_type">类型：%s</string>
    <string name="alert_project">修改项目</string>
    <string name="delete_project_tips">确认是否删除该项目</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_fail">删除失败</string>

    <!-- Inventory -->
    <string name="new_inventory">新建清单项</string>
    <string name="inventory_name">清单内容</string>
    <string name="inventory_name_hint">请输入清单内容</string>
    <string name="inventory_advance">详细内容</string>
    <string name="inventory_description">描述</string>
    <string name="inventory_description_hint">请填写描述</string>
    <string name="inventory_time">时间</string>
    <string name="inventory_time_hint">请选择时间</string>
    <string name="inventory_money">金额</string>
    <string name="inventory_money_hint">请输入清单金额</string>
    <string name="inventory_count">数量</string>
    <string name="inventory_count_hint">请输入清单数量</string>
    <string name="color_label">标签颜色</string>

    <!-- 普通项目活动列表 -->
    <string name="my_companions">活动成员</string>
    <string name="not_companions">请先添加活动成员</string>

    <!-- 成员列表 -->
    <string name="new_companion">添加成员</string>
    <string name="companion_name">成员名称：</string>
    <string name="companion_name_input_hint">请输入成员姓名</string>
    <string name="companion_phone">联系电话：</string>
    <string name="companion_phone_input_hint">请输入联系电话</string>
    <string name="companion_recharge">充值金额：</string>
    <string name="companion_recharge_input_hint">请输入充值金额</string>
    <string name="companion_default_payer">默认支付者</string>

    <!-- 活动编辑 -->
    <string name="new_action">新建项目</string>
    <string name="edit_action">编辑项目</string>
    <string name="action_name">活动名称：</string>
    <string name="action_name_input_hint">请输入活动名称</string>
    <string name="action_time">活动时间：</string>
    <string name="action_time_input_hint">请选择活动时间</string>
    <string name="action_money">金额：</string>
    <string name="action_money_input_hint">请输入金额</string>
    <string name="action_payer">支付者：</string>
    <string name="action_payer_input_hint">请选择支付者</string>
    <string name="action_despriction">活动描述：</string>
    <string name="action_despriction_input_hint">请输入活动描述</string>
    <string name="action_pay_assigns">支出分配：</string>

</resources>
