<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_prijects"
            android:checked="true"
            android:title="@string/nav_menu_prijects" />
        <item
            android:id="@+id/nav_main_file_manager"
            android:title="@string/nav_menu_file_manager" />
    </group>

    <item android:title="@string/nav_menu_function">
        <menu>
            <item
                android:id="@+id/nav_menu_function_new"
                android:title="@string/nav_menu_function_new" />
            <item
                android:id="@+id/nav_menu_function_backup"
                android:title="@string/nav_menu_function_backup" />
            <item
                android:id="@+id/nav_menu_function_restore"
                android:title="@string/nav_menu_function_restore" />
            <item
                android:id="@+id/nav_menu_function_clear"
                android:title="@string/nav_menu_function_clear" />
            <item
                android:id="@+id/nav_menu_function_calculator"
                android:title="@string/nav_menu_function_calculator" />
        </menu>
    </item>

</menu>
