<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/padding_normal"
        android:paddingLeft="@dimen/padding_large"
        android:paddingRight="@dimen/padding_large"
        android:paddingTop="@dimen/padding_normal"
        app:columnCount="3">

        <TextView
            style="@style/TextAppearance.EditActions.Tips"
            android:text="@string/action_name"
            app:layout_columnSpan="1"/>

        <EditText
            android:id="@+id/et_edit_action_name"
            style="@style/TextAppearance.EditActions"
            android:hint="@string/action_name_input_hint"
            app:layout_columnSpan="2"
            app:layout_columnWeight="2"/>

        <TextView
            style="@style/TextAppearance.EditActions.Tips"
            android:text="@string/action_time"
            app:layout_columnSpan="1"/>

        <EditText
            android:id="@+id/et_edit_action_time"
            style="@style/TextAppearance.EditActions"
            android:hint="@string/action_time_input_hint"
            app:layout_columnSpan="2"
            app:layout_columnWeight="2"/>

        <TextView
            style="@style/TextAppearance.EditActions.Tips"
            android:text="@string/action_money"
            app:layout_columnSpan="1"/>

        <EditText
            android:id="@+id/et_edit_action_momey"
            style="@style/TextAppearance.EditActions"
            android:hint="@string/action_money_input_hint"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"/>

        <Spinner
            android:id="@+id/sp_edit_action_pay_type"
            android:entries="@array/price_type"
            android:minWidth="108dp"
            android:spinnerMode="dropdown"
            app:layout_columnSpan="1"/>

        <TextView
            style="@style/TextAppearance.EditActions.Tips"
            android:text="@string/action_payer"
            app:layout_columnSpan="1"/>

        <EditText
            android:id="@+id/et_edit_action_payer"
            style="@style/TextAppearance.EditActions"
            android:hint="@string/action_payer_input_hint"
            app:layout_columnSpan="2"
            app:layout_columnWeight="2"/>

        <TextView
            style="@style/TextAppearance.EditActions.Tips"
            android:text="@string/action_despriction"
            app:layout_columnSpan="1"/>

        <EditText
            style="@style/TextAppearance.EditActions"
            android:hint="@string/action_despriction_input_hint"
            app:layout_columnSpan="2"
            app:layout_columnWeight="2"/>

        <TextView
            style="@style/TextAppearance.EditActions.Tips"
            android:text="@string/action_pay_assigns"
            app:layout_columnSpan="1"/>

        <android.support.v7.widget.RecyclerView
            app:layout_columnSpan="2"
            app:layout_columnWeight="2"/>
    </android.support.v7.widget.GridLayout>
</ScrollView>