<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                      xmlns:app="http://schemas.android.com/apk/res-auto"
                                      xmlns:tools="http://schemas.android.com/tools"
                                      android:layout_width="match_parent"
                                      android:layout_height="wrap_content"
                                      android:minWidth="@dimen/dialog_width_normal"
                                      android:padding="@dimen/padding_normal"
                                      app:columnCount="2"
                                      app:orientation="horizontal"
                                      app:useDefaultMargins="@dimen/padding_normal">

    <TextView
        style="@style/TextAppearance.Dialog.Title"
        android:text="@string/alert_project"
        app:layout_columnSpan="2"
        app:layout_columnWeight="1"/>

    <TextView
        style="@style/TextAppearance.Dialog.NameText"
        android:text="@string/project_name"/>

    <EditText
        android:id="@+id/et_dialog_new_project_name"
        style="@style/TextAppearance.Dialog.ValueEdit"
        android:hint="@string/project_name_hint"
        app:layout_columnWeight="1"/>

    <TextView
        android:id="@+id/tv_dialog_new_project_total_money"
        style="@style/TextAppearance.Dialog.NameText"
        android:text="@string/project_total_money"/>

    <EditText
        android:id="@+id/et_dialog_new_project_total_money"
        style="@style/TextAppearance.Dialog.ValueEdit"
        android:hint="@string/project_total_money_hint"
        android:inputType="numberDecimal"
        app:layout_columnWeight="1"/>
</android.support.v7.widget.GridLayout>